# python-pytest-auto

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  readme.md  requirements.txt
app/: Calculator.py  data_handler.py  db_handler.py  logger.py
github/workflows/: ci.yml
tests/: conftest.py  test_playground.py  test_random.py
tests/api/: test_api.py
tests/cucumber/features/: authenticate.feature  calculator.feature  videogame.feature
tests/cucumber/steps/: calculator.py  test_authenticate.py  test_calculator.py  test_videogame.py
tests/database/: test_customer.py  test_insert_employees.py
tests/dictionaries/: test_dictionary.py
tests/exceptions/: test_exception.py
tests/fixtures/: test_fixtures.py
tests/lists/: test_list.py  test_list_operations.py
tests/math/: test_calculator.py  test_given_numbers.py  test_skip_expected_failures.py  test_winning_numbers.py
tests/pandas/: test_csv_employee_data.py  test_employees_pandas.py
tests/parametrise/: test_parametrise.py
tests/set/: test_set.py
tests/tuple/: test_tuple.py
